schema/testdata/validation_relationships_one_to_one_with_relation_on_wrong_side/schema.keel
model Author {
    fields {
        written Post @unique
    }
}

model Post {
    fields {
        author Author @relation(written)
    }
}
