schema/testdata/errors/relationships_one_to_one_with_relation_attr_no_unique_attr.keel
model Author {
    fields {
        written Post
    }
}

model Post {
    fields {
        //expect-error:9:15:RelationshipError:A one to one relationship requires a single side to be @unique
        author Author @relation(written)
    }
}
